<resources>
    <string name="app_name">kintokan</string>
    <string name="name_hint">enter name</string>
    <string name="age_hint">enter age</string>
    <string name="inter_1">
        INTERMEDIATE ! \n \n Intermediate 1 or Intermediate 2, educational qualifications in Scotland Intermediate (anatomy), the relative location of an anatomical structure lying between two other structures: see Anatomical terms of location Intermediate Edison Screw, a system of light bulb connectors Intermediate goods, goods used to produce other goods Middle school, also known as intermediate school Intermediate Examination, standardized post-secondary entrance exams in the Indian Subcontinent, also known as the Higher Secondary Examination In chemistry, a reaction intermediate is a reaction product that serves as a precursor for other reactions A reactive intermediate is a highly reactive reaction intermediate, hence usually short-lived   Intermediate car, an automobile size classification Intermediate cartridge, a type of firearms cartridge Intermediate composition, a geological classification of the mineral composition of a rock, between mafic and felsic</string>
    <string name="inter_2">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ HEC :\n \n " The students who are interested in the Indian history. The group has the more advantages that the subjects are very helpful in the competitive exams or recruitment examinations"
        \n
        After H.E.C in inter you can take these courses:\n
1)Degree Course:\n
•	B A.          (Bachelor of Arts)  in\n
•	History\n
•	Economics\n
•	Political Science\n
•	Public Administration\n
•	Sociology\n
•	Social Work\n
•	Psychology\n
•	Journalism\n
•	Tourism\n
•	Languages\n
•	Literature\n
•	Philosophy\n
•	Multimedia\n
•	Criminology\n
•	Geography\n
•	Archaeology\n
•	Anthropology\n
•	Astrology\n
•	Statistics\n
•	Islamic Studies\n
•	Computr Applications\n
•	Marketing\n
•	Media\n
•	Oriental Languages\n
•	Mass Communication\n
•	Modern Languages\n
•	Classical Languages\n
•	Astrology\n
•	Music and Dance\n
2)Double / Dual / Integrated Degrees: ( 5 years )\n
•	BA + MA\n
•	BBA + MBA\n
•	BA = LLB\n
•	BA + B.Ed\n
•	Other Bachelor Degrees :\n
•	BHM  and CT      (Bachelor of Hotel Management and Catering Tech.)\n
•	BHRM                        (Bachelor of Human Resource Management)\n
•	BCA                (Bachelor of Computer Applications)\n
•	BBA                (Bachelor of Business Administration)\n
3)BBA(Hons)   (Bachelor of Business Administration- Honors in Tourism)\n
•	BBM               (Bachelor of Business Management)\n
•	BFA                (Bachelor of Fine Arts, Applied/Paint/Photo/Sclp,)\n
•	BFT                 (Bachelor of Fashion Technology)\n
•	B.Des.            (Bachelor of Design in Fashion Designing)\n
•	B.Des.            (Bachelor of Design in Leather Designing)\n
•	B.Des.            (Bachelor of Design in Accessory Design)\n
•	B.Des.            (Bachelor of Design in Textile Designing)\n
•	B.Des.            (Bachelor of Design in Knitwear Design)\n
•	B.Des.            (Bachelor of Design in Fashion Communication)\n
•	B.Music          (Bachelor of Music)\n
4)Certificate and Professional  Courses:\n
•	Performing Arts\n
•	Foreign Languages\n
•	Literature\n
•	Library Science\n
•	Railway Tech.\n
•	Music / Dance\n
•	Jyothsiam\n
•	Human Rights\n
•	Pre-Primary Teacher’s\n
•	Early Childhood Ed.\n
•	Rural Development\n
•	Food and Nutrition\n
•	Air Ticketing\n
    </string>
    <string name="inter_3">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\C.E.C: \n \n  Most of the people think that opportunities are less with compare than other branches like MPC. But this group has the better chances than other groups. To get the Government jobs, this group is very helpful to the students. Students may also enter into the accounting field by the courses CA / ICWA. For the early career, this group is very helpful for the state wise government jobs or secretariat jobs these students have the more advantages.
         \n \n \n This courses you can do after C.E.C
Degree\n
•	BCom Applied Economics\n
•	BCom Economics\n
•	BCom Marketing\n
•	BCom Accountancy\n
•	BCom Finance\n
•	BCom Accounting and Finance\n
•	BCom Banking and Finance\n
•	BCom Banking Management\n
•	BCom Banking and Insurance\n
•	BCom Insurance Management\n
•	BCom Tourism and Travel Management\n
•	BCom Business Economics\n
•	BCom Business Administration\n
•	BCom Computer Applications\n
•	BCom Corporate Secretaryship\n
•	BCom E-Commerce\n
•	BCom Financial Markets\n
•	BCom Financial Accounting\n
•	BCom Foreign Trade Management\n
•	BCom Professional\n
•	BCom Management Studies\n
•	BCom Statistics\n
•	BCom Supply Chain Management\n
•	BCom Tax Procedure and Practice\n
•	BCom Taxation\n
•	BCom Capital Market\n
•	BCom Computer Science\n
•	BCom Accounting\n
    </string>
    <string name="inter_4">
      \t\t\t\t\t\t\t\t\t\t\t\t\t\t\tBI.P.C:  \n \n The full form of BiPC is Biology, Physics and Chemistry and refers to the combination of subjects in science stream at intermediate or pre-university level in India
        \n Course after  BI.P.C:\n
•	Bachelor of Medicine\n
•	Bachelor  of Surgery\n
•	Dental Sciences\n
•	Bachelor of Homeopathic medicine and surgery(B.H.M.S)\n
•	BSc Agriculture\n
•	BSc Biotechnology\n
•	BSc Zoology\n
•	BSc Clinical Research and Healthcare Management\n
•	BSc Forestry\n
•	BSc Microbiology\n
•	BSc Nursing\n
•	B.Sc. Physiotherapy\n
•	B.Sc. Radiology\n
•	B.Sc. Bioinformatics\n
•	Bachelor of Medicine (MBBS)\n
•	B.Sc. Botany\n

NOTE:  After  “BIPC”  you  can join in colleges after you compeleted your 2 years course otherwise you can write  “NEET EXAMINATION”\n

NOTE: These are the  courses which you can do after Bipc there are still coueses our team will provide you in future\n

    </string>
    <string name="diploma_text_1">
            \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ About Diploma
    \n \n
DIPLOMA A diploma is a certificate or deed issued by an educational institution, such as college or university, that testifies that the recipient has successfully completed a particular course of study. The word diploma also refers to an academic award which is given after the completion of study in different courses such as diploma in higher education, diploma in graduation or diploma in post-graduation. Historically, it can also refer to a charter or official document,thus diplomatic, diplomat and diplomacy via the Codex Juris Gentium Diplomaticus.
\n

</string>
    <string name="diploma_text_3">
         \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\CME: \n \n A diploma in computer engineering or computer science engineering is a 10+2 level of academic programme. It provides students with the basic knowledge of computer science , mathematics and computing techniques and engineering concepts.
\n
    </string>
    <string name="diploma_text_4">

         \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ECE:\n \n Electronics and communication engineering is an emerging field of engineering. In first half of the course, the students go through the basic engineering concept, physics, mathematics and chemistry. … Diploma courses leading to the polytechnic diploma of 3 years duration.
\n
    </string>
    <string name="diploma_text_5">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ CIVIL:\n \n Polytechnic Diploma in Civil Engineering. Short Description. This course is about designing the process, maintenance, and construction of roads, dams, bridges, buildings, etc.
\n
    </string>
    <string name="diploma_text_6">
       \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\  EEE:\n \n Diploma in Electrical and Electronics Engineering is a 3 years long Diploma certificate program. This course can be pursued by students who have passed 10th and 12th (Science stream, mathematics group) standards
\n
    </string>
    <string name="diploma_text_7">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ AUTO MOBILE:\n \n Â  Automotive engineering is one of the most sophisticated courses in engineering which involves design, manufacturing, modification and maintenance of an automobile such as buses, cars, trucks and other transportation vehiclesâ€‹
\n
    </string>
    <string name="diploma_text_8">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\ MECH:\n \n Diploma in Mechanical Engineering is a twelfth level Diploma course which deals with the field of engineering. Mechanical engineering is a discipline of engineering that applies the principles of physics and materials science for analysis, design, manufacturing, and maintenance of mechanical systems.
\n
    </string>
    <string name="diploma_text_9">
         \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\METALLURGY:\n \n Diploma in Metallurgical Engineering is a Diploma level Metallurgical Engineering course. Metallurgy Engineering is one in which all sorts of metals are dealing with. … They are taught to solve the problems such as maintaining heat levels, reducing corrosion and increasing the strength of a metal
\n
    </string>
    <string name="diploma_text_10">
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\CHEMICAL:\n \n Diploma in Chemical Engineering is a three-year diploma level engineering programme that equips the learners with the knowledge of creating something useful and new using chemicals or raw materials along with life sciences and physical sciences
\n
    </string>
</resources>