<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".diplama">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout_1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/diploma_text_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_1"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_3"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_tex_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_4"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_5"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_6"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_7"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_8"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_9"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/diploma_text_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diploma_text_10"
            android:textSize="20sp">

        </TextView>
            

 </LinearLayout>

</ScrollView>