<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inter">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inter_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inter_1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inter_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inter_2"
            android:textSize="20sp"
            android:paddingTop="100dp"
            />

        <TextView
            android:id="@+id/inter_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inter_3"
            android:textSize="20sp"
            android:paddingTop="100dp"
            />

        <TextView
            android:id="@+id/inter_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inter_4"

            android:textSize="20sp"
            android:paddingTop="100dp"



            />


    </LinearLayout>
</android.widget.ScrollView>